# python-cli-tool-starter-pack

./: .gitlab-ci.yml  .releaserc.yaml  README.md  default.gitlab-ci.yml  pyproject.toml
src/name-of-the-application/: __init__.py  argument_parser.py  config.py  log_setup.py  main.py
